# project-107cf1

./: .gitignore  Cargo.toml  README.md  Texture_Compression.cprj  build.rs  bundle_macos_client.sh  rustfmt.toml  specification.md
base/: Cargo.toml
base/macos/: build.rs
base/src/: execution.rs  lib.rs  main_registry.rs  overworld.rs  persistence.rs  physics.rs  player.rs  registry.rs  scene.rs  tests.rs  utils.rs
base/src/execution/: timer.rs  virtual_processor.rs
base/src/overworld/: accessor.rs  actions_storage.rs  block.rs  block_model.rs  cluster_part_set.rs  facing.rs  generator.rs  interface.rs  item.rs  light_state.rs  liquid_state.rs  occluder.rs  orchestrator.rs  position.rs  raw_cluster.rs  structure.rs
base/src/persistence/: block_states.rs
base/src/physics/: aabb.rs  physical_object.rs
base/src/utils/: instant_meter.rs  noise.rs  qef.rs  recurring_task.rs  threading.rs  voronoi_noise.rs  white_noise.rs
client/: .gitignore  Cargo.toml  Info.plist  build.rs
client/3d_models/: material_item_blob.blend
client/engine/: .gitignore  Cargo.toml  build.rs
client/engine/msdfgen/: Cargo.toml  build.rs
client/engine/shader_ids/: Cargo.toml  build.rs  wrapper.h
client/engine/shaders/: bloom_downscale.frag  bloom_upscale.frag  combine_main_and_overlay.frag  common.glsl  compose.frag  cull.comp  depth_pyramid.comp  engine_ids.h  g_buffer_merge.frag  noise.glsl  object3d.glsl  panel.frag  post_sky.frag  sky.glsl  solid_transparent_merge.frag  text_char.frag  text_char.vert  text_char_frag_template.glsl  tonemap.frag  translucency_closest_depths.frag
client/engine/src/: ecs.rs  event.rs  execution.rs  gltf.rs  input.rs  lib.rs  module.rs  platform.rs  utils.rs
client/engine/vk-wrapper/: Cargo.toml
client/res/models/: material_item_blob.glb
client/res/textures/: glow_texture.basis  lawn.basis  stone.basis
client/src/: default_resource_mapping.rs  default_resources.rs  game.rs  main.rs  proto.rs  rendering.rs  resource_mapping.rs  tests.rs
client/src/game/: ui.rs
client/src/rendering/: item_visuals.rs  material_pipelines.rs  overworld_renderer.rs  texture_material.rs  textured_block_model.rs  ui.rs
common/: Cargo.toml
common/macos/: Cargo.toml  build.rs
common/macos/src/: lib.rs
common/src/: alloc.rs  any.rs  function_storage.rs  instant_meter.rs  lib.rs  lrc.rs  nd_range.rs  resource_cache.rs  resource_encoder.rs  resource_file.rs  scene.rs  shader_compiler.rs  slice_split.rs  threading.rs  timer.rs  types.rs  unsafe_slice.rs  utils.rs
common/src/alloc/: index_allocator.rs
common/src/scene/: relation.rs
core/: Cargo.toml
core/macos/: Cargo.toml
core/src/: execution.rs  lib.rs  main_registry.rs  overworld.rs  overworld_orchestrator.rs  overworld_streamer.rs  physics.rs  registry.rs  scene.rs  utils.rs
core/src/overworld/: accessor.rs  actions_storage.rs  block.rs  block_model.rs  cluster_dirty_parts.rs  cluster_part_set.rs  facing.rs  generator.rs  light_level.rs  light_state.rs  liquid_level.rs  liquid_state.rs  material.rs  orchestrator.rs  overworld_streamer.rs  position.rs  raw_cluster.rs  structure.rs  textured_block_model.rs
core/src/physics/: aabb.rs
core/src/scene/: relation.rs
core/src/utils/: resource_file.rs  threading.rs  timer.rs  unsafe_slice.rs  voronoi_noise.rs
engine/: Cargo.toml  build.rs
engine/macos/: Cargo.toml
engine/msdfgen/: Cargo.toml
engine/msdfgen/cxx/: lib.h
engine/msdfgen/src/: lib.rs
engine/shader_ids/: Cargo.toml
engine/shaders/: common.glsl  common.hlsl  common.hlsli  compose.frag  cull.comp  depth_pyramid.comp  engine_ids.h  morton.hlsli  panel.frag  panel.vert  ray_tracing.hlsli  rt_aabbs_for_lbvhs.comp.hlsl  rt_bottom_lbvh_generation.comp.hlsl  rt_bottom_lbvh_node_bounds.comp.hlsl  rt_bottom_lbvh_prepare_leaves.comp.hlsl  rt_bounds_for_bottom_lbvh.comp.hlsl  rt_bounds_for_triangles.comp.hlsl  rt_lbvh_generation.comp.hlsl  rt_morton_bitonic_sort.comp  rt_morton_bitonic_sort.comp.hlsl  rt_morton_codes_for_triangles.comp  rt_morton_codes_for_triangles.comp.hlsl  rt_prepare_bottom_lbvh_leaves.comp.hlsl  rt_prepare_top_lbvh_leaves.comp.hlsl  rt_prepare_triangles.comp.hlsl  rt_scene_bounding_box.comp.hlsl  rt_top_lbvh_bounds.comp.hlsl  rt_top_lbvh_generation.comp.hlsl  rt_top_lbvh_leaf_bounds.comp.hlsl  rt_top_lbvh_node_bounds.comp.hlsl  rt_top_lbvh_prepare_leaves.comp.hlsl  text_char.frag  text_char.vert  trace_rays.comp.hlsl  translucency_closest_depths.frag  ui_rect.vert
engine/src/: ecs.rs  event.rs  execution.rs  input.rs  keyboard.rs  lib.rs  module.rs  physics.rs  platform.rs  queue.rs  renderer.rs  resource_file.rs  utils.rs
engine/src/ecs/: component.rs  dirty_components.rs  public_scene_interface.rs  scene.rs  scene_storage.rs  system.rs
engine/src/module/: main_renderer.rs  text_renderer.rs  ui_interaction_manager.rs  ui_renderer.rs
engine/src/physics/: collider.rs
engine/src/platform/: macos.rs  windows.rs
engine/src/renderer/: camera.rs  dirty_components.rs  helpers.rs  material_pipeline.rs  module.rs  resources.rs  texture_atlas.rs  ui.rs  vertex_mesh.rs
engine/src/utils/: noise.rs  qef.rs  slot_vec.rs  thread_pool.rs  voronoi_noise.rs  white_noise.rs  wsi.rs
engine/vk-wrapper/: Cargo.toml
engine/vk-wrapper/src/: adapter.rs  buffer.rs  cmd_list.rs  descriptor_pool.rs  device.rs  entry.rs  format.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  pipeline.rs  pipeline_signature.rs  (+7 more)
vk-engine/: Cargo.toml
vk-engine/src/: adapter.rs  allocator.rs  buffer.rs  cmd_list.rs  device.rs  entry.rs  fence.rs  format.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  renderpass.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  utils.rs
vk-wrapper/: Cargo.toml
vk-wrapper/src/: adapter.rs  buffer.rs  cmd_list.rs  descriptor_pool.rs  device.rs  entry.rs  fence.rs  format.rs  framebuffer.rs  image.rs  image_view.rs  instance.rs  lib.rs  pipeline.rs  pipeline_input.rs  pipeline_signature.rs  query_pool.rs  queue.rs  render_pass.rs  sampler.rs  semaphore.rs  shader.rs  surface.rs  swapchain.rs  utils.rs
vk-wrapper/vma/: wrapper.h
(+404 files in other folders)
