[workspace]
members = [
    "common",
    "base",
    "common/macos",
    "client/engine",
    "client/engine/vk-wrapper",
    "client/engine/vk-wrapper/vma",
    "client/engine/msdfgen",
    "client/engine/shader_ids",
    "client",
]
resolver = "2"


[workspace.dependencies]
log = "0.4"
simple_logger = "5.1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
erased-serde = "0.4"
serde_yaml = "0.9"
serde_json = "1.0"
lazy_static = "1.5"
entity_data = { version = "1.12", features = ["rayon"] }
glob = "0.3"
byteorder = "1.5"
postcard = { version = "1.1", features = ["use-std"] }
indexmap = "2.13"
moka = { version = "0.12", features = ["sync"] }
ahash = "0.8"
parking_lot = { version = "0.12", features = [
    "arc_lock",
    "hardware-lock-elision",
    "deadlock_detection",
] }
rayon = "1.11"
nalgebra = "0.34"
nalgebra-glm = "0.20"
tokio = { version = "1", features = ["rt", "time", "sync", "parking_lot"] }
futures-lite = "2.6"
bumpalo = "3.19"
index-pool = "1.0"
ring = "0.17"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
noise = { version = "0.9", default-features = false }
rand = "0.9"
rand_distr = "0.5"
approx = "0.5"
smallvec = { version = "1.15", features = ["const_generics"] }
bit-vec = "0.8"
fixedbitset = "0.5"
replace_with = "0.1"
rstar = "0.12"
rand_xoshiro = "0.7"
lz4_flex = { version = "0.12", default-features = false, features = ["std"] }
dirs = "6.0"
clipboard = "0.5"
basis-universal = "0.3"
winit = "0.30"
rusttype = "0.9"
unicode-normalization = "0.1"
bitvec = "1.0"
gltf = { version = "1.4", features = ["utils"], default-features = false }
ash = "0.37"
raw-window-handle = "0.6"
spirv-cross2 = { version = "0.4", features = [
    "glsl",
], default-features = false }
generational-arena = "0.2"
by_address = "1.2"
bindgen = "0.72"
cc = "1.2"
cxx = "1.0"
cxx-build = "1.0"


[profile.dev.package."*"]
opt-level = 1

[profile.dev.package."serde"]
opt-level = 3

[profile.dev.package."serde_derive"]
opt-level = 3

[profile.dev.package."serde_bytes"]
opt-level = 3

[profile.dev.package."erased-serde"]
opt-level = 3

[profile.dev.package."tokio"]
opt-level = 3

[profile.dev.package."basis-universal-sys"]
opt-level = 3

[profile.dev.package."nalgebra"]
opt-level = 3

[profile.dev.package."nalgebra-glm"]
opt-level = 3

[profile.dev.package."ash"]
opt-level = 3

[profile.dev.package."lz4_flex"]
opt-level = 3
