[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
noise = { version = "0.8", default-features = false }
rand = "0.8"
rand_distr = "0.4"
approx = "0.5"
entity_data = "1.11"
#entity_data = { path = "../../entity_data" }
smallvec = "1.10"
bit-vec = "0.6"
fixedbitset = "0.4"
replace_with = "0.1"
lazy_static = "1.4"
rstar = "0.11"
bumpalo = "3.13"
rand_xoshiro = "0.6"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
erased-serde = "0.3"
bincode = "1.3"
serde_json = "1.0"
