[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
noise = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
entity_data = { workspace = true }
smallvec = { workspace = true }
bit-vec = { workspace = true }
fixedbitset = { workspace = true }
replace_with = { workspace = true }
lazy_static = { workspace = true }
rstar = { workspace = true }
bumpalo = { workspace = true }
rand_xoshiro = { workspace = true }
lz4_flex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
erased-serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
