[package]
name = "project-107cf1"
version = "0.1.0"
authors = ["volodya7292 <a7292969@gmail.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
engine = { path = "engine" }
base = { path = "../base" }
simple_logger = "4.1"
image = { version = "0.24", default-features = false, features = ["png"] }
noise = { version = "0.8", default-features = false }
rand = "0.8"
rand_distr = "0.4"
approx = "0.5"
entity_data = "1.10"
#entity_data = { path = "../entity_data"}
smallvec = "1.10"
bit-vec = "0.6"
fixedbitset = "0.4"
lazy_static = "1.4"

[build-dependencies]
common = { path = "../common" }

[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = "1.2"
