[package]
name = "project-107cf1"
version = "0.1.0"
authors = ["volodya7292 <a7292969@gmail.com>"]
edition = "2021"

[dependencies]
common = { path = "../common" }
engine = { path = "engine" }
base = { path = "../base" }
simple_logger = { workspace = true }
noise = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
entity_data = { workspace = true }
smallvec = { workspace = true }
bit-vec = { workspace = true }
fixedbitset = { workspace = true }
lazy_static = { workspace = true }
dirs = { workspace = true }
clipboard = { workspace = true }
by_address = { workspace = true }

[build-dependencies]
common = { path = "../common" }
shader_ids = { path = "engine/shader_ids" }

[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = "1.2"
