[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_bytes = { workspace = true }
glob = { workspace = true }
byteorder = { workspace = true }
postcard = { workspace = true }
entity_data = { workspace = true }
indexmap = { workspace = true }
moka = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
nalgebra-glm = { workspace = true }
tokio = { workspace = true }
futures-lite = { workspace = true }
bumpalo = { workspace = true }
index-pool = { workspace = true }
ring = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
macos = { path = "../common/macos" }
