[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vk-wrapper = { path = "../engine/vk-wrapper" }
log = "0.4"
simple_logger = "4.0"
nalgebra = "0.31"
nalgebra-glm = "0.17"
image = { version = "0.24", default-features = false, features = ["png"] }
rayon = "1.5"
crossbeam-channel = "0.5"
futures = "0.3"
noise = { version = "0.8", default-features = false }
rand = "0.8"
rand_distr = "0.4"
winit = "0.27"
approx = "0.5"
entity_data = "1.7"
#entity_data = { path = "../../entity_data" }
smallvec = "1.6"
bit-vec = "0.6"
fixedbitset = "0.4"
replace_with = "0.1"
lazy_static = "1.4"
parking_lot = { version = "0.12", features = ["arc_lock", "hardware-lock-elision", "deadlock_detection"] }
once_cell = "1.13"
rstar = "0.9"
bumpalo = "3.11"
index-pool = "1.0"
rand_xoshiro = "0.6"
byteorder = "1.4"
ahash = "0.8"
moka = "0.9"
indexmap = "1.9"

[target.'cfg(target_os = "macos")'.dependencies]
macos = { path = "../core/macos" }
