[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4"
nalgebra = "0.31"
nalgebra-glm = "0.17"
basis-universal = "0.2"
rayon = "1.5"
crossbeam-channel = "0.5"
noise = "0.8"
fixedbitset = "0.4"
index-pool = "1.0"
smallvec = { version = "1.9", features = ["const_generics"] }
ahash = "0.8"
lazy_static = "1.4"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"
parking_lot = "0.12"
indexmap = "1.9"
winit = "0.27"
rusttype = "0.9"
unicode-normalization = "0.1"
moka = "0.9"
vk-wrapper = { path = "../vk-wrapper" }
msdfgen = { path = "msdfgen" }

[target.'cfg(target_os = "macos")'.dependencies]
macos = { path = "macos" }

[build-dependencies]
common = { path = "../common" }

