[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
vk-wrapper = { path = "vk-wrapper" }
core = { path = "../core" }
msdfgen = { path = "msdfgen" }
nalgebra = "0.31"
nalgebra-glm = "0.17"
basis-universal = "0.2"
rayon = "1.5"
crossbeam-channel = "0.5"
noise = "0.8"
fixedbitset = "0.4"
index-pool = "1.0"
#entity_data = { path = "../../entity_data", features = ["rayon"] }
entity_data = { version = "1.7.0-rc2", features = ["rayon"] }
smallvec = { version = "1.9", features = ["const_generics"] }
lazy_static = "1.4"
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"
parking_lot = "0.12"
winit = "0.27"
rusttype = "0.9"
unicode-normalization = "0.1"
bitvec = "1.0"
async-executor = "1.5"
async-channel = "1.8"
futures-lite = "1.12"


[build-dependencies]
common = { path = "../common" }

