[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
vk-wrapper = { path = "vk-wrapper" }
base = { path = "../base" }
msdfgen = { path = "msdfgen" }
shader_ids = { path = "shader_ids" }
nalgebra = "0.32"
nalgebra-glm = "0.18"
basis-universal = "0.2"
rayon = "1.6"
crossbeam-channel = "0.5"
fixedbitset = "0.4"
index-pool = "1.0"
entity_data = { version = "1.9", features = ["rayon"] }
#entity_data = { path = "../../entity_data", features = ["rayon"] }
smallvec = { version = "1.9", features = ["const_generics"] }
lazy_static = "1.4"
parking_lot = "0.12"
winit = "0.28"
rusttype = "0.9"
unicode-normalization = "0.1"
bitvec = "1.0"
log = "0.4"
bumpalo = "3.12"
memoffset = "0.8"

[build-dependencies]
common = { path = "../common" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.45", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_HiDpi"] }
