[package]
name = "vk-engine"
version = "0.1.0"
authors = ["MotanGish <motangish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitflags = "1.2.1"
log = "0.4.8"
ash = "0.30.0"
ash-window = "0.3.0"
vk-mem = "0.2.2"
windows = { path = "../windows" }