[package]
name = "vk-wrapper"
version = "0.1.0"
authors = ["a7292969 <a7292969@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
bitflags = "1.3"
log = "0.4"
ahash = "0.7"
bit-set = "0.5"
smallvec = "1.8"
ash = "0.33"
ash-window = "0.7"
raw-window-handle = "0.3"
vk-mem = { git = "https://github.com/dust-engine/vk-mem-rs.git", rev = "b82fbfd" }
spirv_cross = { version = "0.23", features = ["glsl"] }