[package]
name = "vk-wrapper"
version = "0.1.0"
authors = ["a7292969 <a7292969@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
ahash = "0.7"
bit-set = "0.5"
smallvec = "1.8"
parking_lot = "0.12"
ash = "0.36"
ash-window = "0.9"
raw-window-handle = "0.3"
gpu-alloc = "0.5"
gpu-alloc-ash = "0.4"
vma = { path = "../vma" }
spirv_cross = { version = "0.23", features = ["glsl"] }
range-alloc = "0.1"