[package]
name = "engine"
version = "0.1.0"
authors = ["volodya7292 <a7292969@gmail.com>"]
edition = "2024"

[dependencies]
vk-wrapper = { path = "vk-wrapper" }
common = { path = "../../common" }
msdfgen = { path = "msdfgen" }
shader_ids = { path = "shader_ids" }
basis-universal = { workspace = true }
fixedbitset = { workspace = true }
index-pool = { workspace = true }
entity_data = { workspace = true }
smallvec = { workspace = true }
lazy_static = { workspace = true }
winit = { workspace = true }
rusttype = { workspace = true }
unicode-normalization = { workspace = true }
bitvec = { workspace = true }
bumpalo = { workspace = true }
gltf = { workspace = true }

[build-dependencies]
common = { path = "../../common" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
] }
