[package]
name = "vk-wrapper"
version = "0.1.0"
authors = ["volodya7292 <a7292969@gmail.com>"]
edition = "2021"

[dependencies]
common = { path = "../../../common" }
vma = { path = "vma" }
lazy_static = { workspace = true }
smallvec = { workspace = true }
ash = { workspace = true }
raw-window-handle = { workspace = true }
spirv_cross = { workspace = true }
generational-arena = { workspace = true }
by_address = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"
